moe: Improve documentation on usable dataspace map flags
Change-Id: Ib55ec4f0aaae32bc15d61013f23b3939142c3cd0

--- a/moe/doc/moe.dox
+++ b/moe/doc/moe.dox
@@ -129,6 +129,11 @@
  * - Physically contiguous and pre-allocated
  * - Non contiguous and on-demand allocated with possible copy on write (COW)
  *
+ * Dataspaces allocated via the Moe's factory allow mappings with any
+ * combination of the read-write-execute (RWX) rights, subject to a possible
+ * restriction of the writable right for client capabilities lacking the 'W'
+ * right.
+ *
  * \subsection l4re_moe_log Log Subsystem
  *
  * The logging facility of Moe provides per application tagged and
