sigma0: document parameter direction and alias of l4sigma0_new_client
Change-Id: Ia7db0593613a5f3a72cbefd5f4fb0e4c71e9bee3

--- a/sigma0/doc/sigma0.dox
+++ b/sigma0/doc/sigma0.dox
@@ -26,6 +26,7 @@
  * - Sigma0 ()
  *   - Use protocol id #L4_PROTO_SIGMA0 for creation
  *   - No arguments supported
+ *   - identical to l4sigma0_new_client()
  *
  * \see l4sigma0_api
  */
