--- a/l4sys/doc/l4sys-l4f-groups.dox
+++ b/l4sys/doc/l4sys-l4f-groups.dox
@@ -53,13 +53,13 @@ namespace L4 { };
 /**
  * \defgroup api_calls_fiasco Fiasco extensions
  * \ingroup  l4_api
- * \brief    Kernel debugger extensions of the Fiasco L4 implementation
+ * \brief    Extensions of the Fiasco L4 implementation
  */
 
 /**
  * \defgroup api_calls_rt_sched Fiasco real time scheduling extensions
  * \ingroup  api_calls_fiasco
- * \brief    Real time scheduling extension for the Fiasco L4 implementation
+ * \brief    Real time scheduling extension for the Fiasco %L4 implementation
  */
 
 /**
